	*						 *
	*	       2.0 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.0.0


USER-VISIBLE CHANGES

    o	The stub packages from 1.9.x have been removed: the library()
	function selects the new home for their code.


NEW FEATURES

    o	file.edit() function added:  like file.show(), but allows editing.


UTILITIES




C-LEVEL FACILITIES




DEPRECATED & DEFUNCT

    o	La.eigen(), tetragamma(), pentagamma(), package.contents() and
	package.description() are defunct.



INSTALLATION CHANGES




BUG FIXES

    o   Installing saved images in packages is done with just the base 
	package loaded, consistently on all platforms.  Package maintainers
	should ensure they require() other standard packages they use.

	

	
	**************************************************
	*						 *
	*	       1.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.9.1


NEW FEATURES

    o	as.Date() now has a method for "POSIXlt" objects.

    o	mean() has a method for "difftime" objects and so summary() works.


BUG FIXES

    o	pbinom(q, N, prob) is now more accurate when prob is close to 0
	(PR#6757).

    o	pcauchy(x, .., log.p) is now more accurate for large x,
	particularly when log.p = TRUE	(PR#6756).

    o	makeARIMA() was not handling an ARMA(0, 0) model correctly.

    o	as.Date() was failing on factors.  (PR#6779)

    o	min(), max() and range() were failing on "difftime" objects.

    o	as.data.frame.list() could fail on some unusual list names.
	(PR#6782)

    o	type.convert() ignored na.strings when no conversion was done.
	(PR#6781, not needed for its primary use in read.table.)




		CHANGES IN R VERSION 1.9.0


USER-VISIBLE CHANGES

    o	Underscore '_' is now allowed in syntactically valid names, and
	make.names() no longer changes underscores.  Very old code
	that makes use of underscore for assignment may now give
	confusing error messages.
