@@ -671,7 +671,7 @@ void	R_ClearerrConsole(void);
 void	R_Busy(int);
 int	R_ShowFile(char*, char*);
 int	R_ShowFiles(int, char **, char **, char *, Rboolean, char *);
-int     R_EditFiles(int, char **, char *);
+int     R_EditFiles(int, char **, char **, char *);
 int	R_ChooseFile(int, char*, int);
 char*	R_Date(void);
 char*	R_HomeDir(void);
