@@ -237,21 +237,22 @@ SEXP do_fileshow(SEXP call, SEXP op, SEXP args, SEXP rho)
  *
  *  Open a file in a text editor. The function calls
  *  "R_EditFiles" which is a platform dependent hook that invokes
- *  the given editor. 
+ *  the given editor.
  *
  */
 
 
 SEXP do_fileedit(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
-    SEXP fn, ed;
-    char **f, *vm, *editor;
+    SEXP fn, ti, ed;
+    char **f, *vm, **title, *editor;
     int i, n;
 
     checkArity(op, args);
     vm = vmaxget();
     fn = CAR(args); args = CDR(args);
-    ed = CAR(args); 
+    ti = CAR(args); args = CDR(args);
+    ed = CAR(args);
 
     n = length(fn);
     if (!isString(ed))
@@ -260,11 +261,16 @@ SEXP do_fileedit(SEXP call, SEXP op, SEXP args, SEXP rho)
 	if (!isString(fn))
 	    errorcall(call, "invalid filename specification");
 	f = (char**)R_alloc(n, sizeof(char*));
+	title = (char**)R_alloc(n, sizeof(char*));
 	for (i = 0; i < n; i++) {
 	    if (!isNull(STRING_ELT(fn, i)))
 		f[i] = CHAR(STRING_ELT(fn, i));
 	    else
 		f[i] = CHAR(R_BlankString);
+	    if (!isNull(STRING_ELT(ti, i)))
+	    	title[i] = CHAR(STRING_ELT(ti, i));
+	    else
+	    	title[i] = CHAR(R_BlankString);
 	}
     }
     else {  /* open a new file for editing */
@@ -276,7 +282,7 @@ SEXP do_fileedit(SEXP call, SEXP op, SEXP args, SEXP rho)
 	editor = CHAR(STRING_ELT(ed, 0));
     else
 	editor = CHAR(R_BlankString);
-    R_EditFiles(n, f, editor);
+    R_EditFiles(n, f, title, editor);
     vmaxset(vm);
     return R_NilValue;
 }
@@ -964,7 +970,7 @@ SEXP do_getlocale(SEXP call, SEXP op, SEXP args, SEXP rho)
     UNPROTECT(1);
 #ifdef HAVE_LANGINFO_CODESET
     utf8locale = strcmp(nl_langinfo(CODESET), "UTF-8") == 0;
-#endif    
+#endif
     return ans;
 #else
     return R_NilValue;
