@@ -7,7 +7,8 @@ See the file NEWS for changes that affect all versions of R.
 rw2000
 ======
 
-Added Rgui script editor by Chris Jackson.
+Added Rgui script editor by Chris Jackson.  Supports object name
+in window caption in edit() and fix().
 
 Changed preferences menu "Finish" to "OK".
 
