@@ -18,6 +18,9 @@ USER-VISIBLE CHANGES
 NEW FEATURES
 
     o	file.edit() function added:  like file.show(), but allows editing.
+	
+    o	edit() and fix() use the object name in the window caption on 
+	some platforms.
 
 
 UTILITIES
